--- a/Alura.Tunes.Data/Alura.Tunes.Data.csproj
+++ b/Alura.Tunes.Data/Alura.Tunes.Data.csproj
@@ -116,11 +116,15 @@
     <Compile Include="Data\Playlist.cs">
       <DependentUpon>AluraTunes.tt</DependentUpon>
     </Compile>
+    <Compile Include="Data\sp_Vendas_Por_cliente_Result.cs">
+      <DependentUpon>AluraTunes.tt</DependentUpon>
+    </Compile>
     <Compile Include="Data\TipoMidia.cs">
       <DependentUpon>AluraTunes.tt</DependentUpon>
     </Compile>
     <Compile Include="Extension\ItemNotaFiscalExtension.cs" />
     <Compile Include="Extension\LinqExtension.cs" />
+    <Compile Include="Extension\sp_Vendas_Por_cliente_ResultExtension.cs" />
     <Compile Include="LinqToEntities.cs" />
     <Compile Include="LinqToObjects.cs" />
     <Compile Include="LinqToXml.cs" />
